# retailsync-insight

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: clima_resumen.csv  eventos_cobertura.csv  transit_stops_alicante.json  transit_stops_bilbao.json  transit_stops_madrid.json  transit_stops_malaga.json  transit_stops_murcia.json  transit_stops_sevilla.json  transit_stops_valencia.json  transit_stops_zaragoza.json  validation_level1.csv  venues_alicante.json  venues_barcelona.json  venues_bilbao.json  venues_madrid.json  venues_malaga.json  venues_murcia.json  venues_sevilla.json  venues_valencia.json  venues_valladolid.json  venues_zaragoza.json
docs/: data_curation.md  supabase_migration_plan.md  validation_level1.md
migrations/: 001_init.sql  002_insights_cache.sql
src/: __init__.py  cli.py  config.py  models.py
src/api/: main.py
src/cache/: store.py
src/db/: supabase_client.py
src/engine/: hidden_audience.py  insight_service.py  narrative.py
src/ingestion/: fetch_hexes.py  migrate.py
src/patterns/: aggregation.py  hidden_audience.py  scoring.py
src/signals/: coverage_test.py  gtfs.py  venues.py
src/tools/: calibration_map.py
src/validation/: level1.py
tests/: test_aggregation.py  test_hidden_audience.py  test_insight_block.py
